--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -21,12 +21,12 @@ Photomultiplier tubes (PMTs) and three wire planes with 3mm spacing at angles of
 
 % \noindent where $\theta$ is the mixing angle, $L$ is the distance from the neutrino source to the detector, $E$ is the energy of the neutrino, and $\Delta m^2$ is the neutrino squared mass difference. $\theta$ and $\Delta m^2$ are the two free parameters of interest in the above equation. The probability $P$ can be determined through a measurement of observed neutrino events compared to expected events, the distance $L$ is readily determined and constant, and $E$ can be computed from the energies of the neutrino's interaction products. 
 
-The BNB is predominantly composed of muon neutrinos, which can undergo charge-current interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track. Around half of muons from BNB neutrino events in {\ub} are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coloumb sccattering (MCS). \\
+The BNB is predominantly composed of muon neutrinos, which can undergo charge-current interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track. Around half of muons from BNB neutrino events in {\ub} are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coulomb sccattering (MCS). \\
 
-The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a and standard deviation given by the Highland formula \cite{highland}: 
+The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a standard deviation given by the Highland formula \cite{highland}: 
 
 \begin{equation}
-	\sigma_\theta^0=\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big]
+	\sigma_o=\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big]
 \end{equation}\label{highland_eqtn}
 
 \noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section}.
