--- a/Tex/technique.tex
+++ b/Tex/technique.tex
@@ -1,10 +1,10 @@
 %%%% SIGNAL SECTION %%%%
 \section{MCS Implementation Using the Maximum Likelihood Method}\label{MCS_technique_section}
 
-This section describes exactly how the phenomenon of multiple coloumb scattering is leveraged to determine the momentum of a track-like particle reconstructed in a LArTPC. In general, the approach is as follows:
+This section describes exactly how the phenomenon of multiple coulomb scattering is leveraged to determine the momentum of a track-like particle reconstructed in a LArTPC. In general, the approach is as follows:
 \begin{enumerate}
 \item The three-dimensional track is broken up into segments of configurable length.
-\item The scattering angles between each consecutive segment are measured.
+\item The scattering angles between consecutive segments are measured.
 \item Those angles combined with the Highland formula (Equation \ref{highland_eqtn}) are used to build a likelihood that the particle has a specific momentum, taking into account energy loss in upstream segments of the track.
 \item The momentum corresponding to the maximum likelihood is chosen to be the MCS computed momentum.
 \end{enumerate}
@@ -15,17 +15,17 @@ The idea and initial implementation of MCS using the maximum likelihood method f
 For this analysis, a minimum start-to-end reconstructed track length of 100 cm was used.% Additionally, the relativistic limit approcimation was also used ($\beta \approx 1$ and $E \approx p$).
 
 \subsection{Track Segmentation}\label{track_segmentation_section}
-The input to the track segmentation routine is a vector of ordered three-dimensional trajectory points (x,y,z) representing the reconstructed track. The points are ordered along the direction of the track, with the first point representing the start of the track, and the last point representing the end of the track. These trajectory points can be determined in a number of ways by different track reconstruction algorithms. In the case of this analysis, the track reconstruction algorithm is named ``pandoraNuPMA" which constructs these three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes to reconstruct the third dimension\cite{Marshall:2015rfa}.\\
+The input to the track segmentation routine is a vector of ordered three-dimensional trajectory points (x,y,z) representing the reconstructed track. The points are ordered along the direction of the track, with the first point representing the start of the track, and the last point representing the end of the track. These trajectory points can be determined in a number of ways by different track reconstruction algorithms. In the case of this analysis, the track reconstruction algorithm is named ``pandoraNuPMA" which constructs these three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes to reconstruct the third dimension\cite{Marshall:2015rfa}. Note that the tracking resolution in the y- (vertical) and z- (beam) directions are determined by the wire plane spacings, while the resolution in the x- (drift) direction is determined by optical signal timing and is therefore the x- direction resolution is better than that of the y- and z- directions.\\
 
 Also input to the track segmentation routine is the desired segment length, which is a tunable parameter. In this note, segment lengths are generally taken to be 10 cm (based on the findings of Section \ref{SegmentLength_MCBNBRecoTrack_section}) except where otherwise explicitly stated (as in Section \ref{SegmentLength_MCBNBRecoTrack_section}). This routine begins at the start of the track, and iterates through the trajectory points in order, each time computing the straight-line distance between the first point and the current one. When a point is reached that is greater than the desired segment length, that iteration stops and the direction cosines of this segment are computed.\\
 
-Given the subset of the three-dimensional trajectory points (x, y, z) that correspond to one ``segment" of the track, a three-dimensional linear fit is applied to the data points using the orthogonal distance regression method around the trajectory point averages for that segment. This method finds the eigenvalues and eigenvectors of the (data - average) covariance matrix and the solution is the one associated with the maximum eigenvalue.\\
+Given the subset of the three-dimensional trajectory points (x, y, z) that correspond to one ``segment" of the track, a three-dimensional linear fit is applied to the data points using the orthogonal distance regression method around the trajectory point averages for that segment. This method finds the eigenvalues and eigenvectors of the (data - average) covariance matrix and the solution is the one associated with the maximum eigenvalue. All trajectory points have equal weight in the fit. There is no goodness-of-fit requirement. It is worth noting that delta rays can deposit energy locally and somewhat off the muon trajectory, resulting in shifted trajectory points. The MCS algorithm does not attempt to remove delta rays or correct for this in any way; it assumes the reconstructed track does not include trajectory points corresponding to energy deposited by delta rays. \\
 
 At the end of this routine, a vector of length $n$ (where $n$ is the number of segments for the track) is stored containing the direction cosines at the start of each segment.
 
 
 \subsection{Scattering Angle Computation}\label{scattering_angle_computation_section}
-This routine within the MCS code takes as input the vector of length $n$ (where $n$ is the number of segments for the track) containing the direction cosines at the start of each segment. In general, the algorithm iterates over consecutive pairs of segments (the segmentation routine is described in Section \ref{track_segmentation_section}) and computes angular scatters between each, and stores them for later use by a future subroutine. This code is more complicated than just taking the dot product between consecutive direction cosines to find the total angular scatter between segments because the Highland formula is derived from scattering independently in the two directions orthogonal to the direction of the track. For this reason, this subroutine performs a coordinate transformation for each pair of segments such that the direction of first of the two segments is along the $z'$ direction, as drawn in Figure \ref{mcs_nocap_fig}. With the $z'$ direction defined as such, $x'$ and $y'$ directions are chosen such that all of $x'$, $y'$, and $z'$ are mutually orthogonal, again shown in Figure \ref{mcs_nocap_fig}\footnote{Note that at this point, all of $x'$, $y'$, and $z'$ are different than the detector coordinates, $x$, $y$, and $z$ which correspond to drift direction, vertical direction, and beam direction respectively.}. The scattering angles both in the $x'$ and $y'$ planes are then computed for each consecutive pairs of segments. After this routine, a vector of length $2n$ is stored containing the scattering angles in the $x'$ plane as well as in the $y'$ plane. These scattering angles are what are input into the maximum likelihood routine to determine track momentum.
+This routine within the MCS code takes as input the vector of length $n$ (where $n$ is the number of segments for the track) containing the direction cosines at the start of each segment. In general, the algorithm iterates over consecutive pairs of segments (the segmentation routine is described in Section \ref{track_segmentation_section}) and computes angular scatters between each, and stores them for later use by a future subroutine. This code is more complicated than just taking the dot product between consecutive direction cosines to find the total angular scatter between segments because the Highland formula is derived from scattering independently in the two directions orthogonal to the direction of the track. For this reason, this subroutine performs a coordinate transformation for each pair of segments such that the direction of first of the two segments is along the $z'$ direction, as drawn in Figure \ref{mcs_nocap_fig}. With the $z'$ direction defined as such, $x'$ and $y'$ directions are chosen such that all of $x'$, $y'$, and $z'$ are mutually orthogonal, again shown in Figure \ref{mcs_nocap_fig}\footnote{Note that at this point, all of $x'$, $y'$, and $z'$ are different than the detector coordinates, $x$, $y$, and $z$ which correspond to drift direction, vertical direction, and beam direction respectively.}. The scattering angles both in the $x'$ and $y'$ planes are then computed for each consecutive pairs of segments\footnote{Both of these scattering angles are used downstream in the MCS algorithm, and therefore the choice of $x'$ and $y'$ are not important.}. After this routine, a vector of length $2n$ is stored containing the scattering angles in the $x'$ plane as well as in the $y'$ plane. These scattering angles are what are input into the maximum likelihood routine to determine track momentum.
 
 
 \subsection{Maximum Likelihood Theory}\label{likelihood_theory_section}
@@ -67,13 +67,13 @@ In general, this routine does a raster scan over postulated track energies in st
 
 Given a postulated full track momentum, the full track energy $E_t$ is computed from the usual energy momentum relation,
 \begin{equation}\label{energy_momentum_relation_eqtn}
-E^2 = p^2 + m^2
+E_t^2 = p_t^2 + m^2
 \end{equation}
- and the maximum likelihood algorithm iterates over angular scatters for each segment, with two $\Delta\theta_j$ values for each segment (corresponding to the $x'$ and $y'$ scattering planes). The energy of the $j$th segment is given by
+ where $p_t$ is the full track momentum and $m$ is the mass of the muon. The maximum likelihood algorithm iterates over angular scatters for each segment, with two $\Delta\theta_j$ values for each segment (corresponding to the $x'$ and $y'$ scattering planes). The energy of the $j$th segment is given by
 \begin{equation}\label{segment_E_equation}
 E_{j} = E_t - k_{cal}*N_{upstream}*l_{seg}
 \end{equation}
-where $k_{cal}$ is the minimally ionizing energy constant given to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of this particular segment, and $l_{seg}$ is the segmentation length. This definition of $E_j$ therefore takes into account energy loss along the track, and can never be negative given the range of possible $E_t$ values described previously. This value of segment energy is used to predict the RMS angular scatter for that segment ($\sigma_\theta^{RMS}$) by way of a modified version of the modified Highland formula, Equation \ref{modified_highland_eqtn}. Still assuming the mean angular scatter, $\mu$, is zero, Equation \ref{negative_llh_eqtn} is evaluated for each segment and all evaluations are summed to compute a total summed negative log likelihood for that postulated track energy, $E_t$.\\
+where $k_{cal}$ is the minimally ionizing energy constant given to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of this particular segment, and $l_{seg}$ is the segmentation length\footnote{Note that measuring the energy loss directly via calorimetric methods is likely a more appropriate way to compute $E_j$ but incorporating calorimetry is outside the scope of this analysis}. This definition of $E_j$ therefore takes into account energy loss along the track, and can never be negative given the range of possible $E_t$ values described previously (this is why the aforementioned raster scan begins at the track's range-based momentum). This value of segment energy is used to predict the RMS angular scatter for that segment ($\sigma_\theta^{RMS}$) by way of a modified version of the modified Highland formula, Equation \ref{modified_highland_eqtn}. Still assuming the mean angular scatter, $\mu$, is zero, Equation \ref{negative_llh_eqtn} is evaluated for each segment and all evaluations are summed to compute a total summed negative log likelihood for that postulated track energy, $E_t$.\\
 
 After the raster scan over postulated track momenta is complete, the one with the smallest summed negative log likelihood is chosen to be the final MCS computed momentum for the track.
 
