--- a/mystyle.sty
+++ b/mystyle.sty
@@ -38,7 +38,7 @@
 % Appendix
 \usepackage[titletoc]{appendix}
 
-\newcommand{\myversion}{1.2.1}
+\newcommand{\myversion}{1.2.2}
 % \newcommand{\myAuthorName}{David Kaleko}
 % Set up the header and footer
 \pagestyle{fancy}
@@ -51,6 +51,6 @@
 \renewcommand\headrulewidth{0.4pt} % Size of the header rule
 \renewcommand\footrulewidth{0.4pt} % Size of the footer rule
 
-\newcommand{\myTitle}{Multiple Coloumb Scattering in MicroBooNE}
+\newcommand{\myTitle}{Multiple Coulomb Scattering in MicroBooNE}
 
 
