updating ipynbs to use shared content, and also changing plot styles according to camillo's edits

--- a/MCS_paper_work.ipynb
+++ b/MCS_paper_work.ipynb
@@ -588,7 +588,7 @@
     "    #BIAS PLOT    \n",
     "    plt.figure(figsize=(10,6))\n",
     "    plt.errorbar(bincenters[:-1],myreses,yerr=myerrs_bias,xerr=binwidth/2,fmt='ro',label='Mean of Gaussian Fit, Errors = std/sqrt(N)')\n",
-    "    plt.ylabel('mean($\\\\frac{%s - %s}{%s}$)'%(latextitles[yvar],latextitles[xvar],latextitles[xvar]),fontsize=25)\n",
+    "    plt.ylabel('GausMean($\\\\frac{%s - %s}{%s}$)'%(latextitles[yvar],latextitles[xvar],latextitles[xvar]),fontsize=25)\n",
     "    plt.xlabel('%s'%titles[slicevar],fontsize=15)\n",
     "    plt.grid(True)\n",
     "    plt.legend(loc='best')\n",
@@ -604,7 +604,7 @@
     "    #RESOLUTION PLOT\n",
     "    plt.figure(figsize=(10,6))\n",
     "    plt.errorbar(bincenters[:-1],mystds,yerr=myerrs_res,xerr=binwidth/2,fmt='bo',label='Width of Gaussian Fit, Errors = std/sqrt(2N)')\n",
-    "    plt.ylabel('std($\\\\frac{%s - %s}{%s}$)'%(latextitles[yvar],latextitles[xvar],latextitles[xvar]),fontsize=25)\n",
+    "    plt.ylabel('GausWidth($\\\\frac{%s - %s}{%s}$)'%(latextitles[yvar],latextitles[xvar],latextitles[xvar]),fontsize=25)\n",
     "    plt.xlabel('%s'%titles[slicevar],fontsize=15)\n",
     "    plt.grid(True)\n",
     "    t = plt.title('Momentum Resolution: %s' % titles[anatype],fontsize=16)\n",
